--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -120,7 +120,7 @@
             <!-- About Section Content -->
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="lead">Full Stack .Net developer with experience with C#, SQL, Bootstrap, HTML, CSS, and JavaScript. </p>
+                    <p class="lead">Full Stack .Net developer with experience in C#, JavaScript, SQL, AngularJS, Azure DevOps, AWS Cloud, MVC, LINQ, JQuery, Rest API, Bootstrap, CSS3, and HTML. </p>
                 </div>
 
             </div>
@@ -128,23 +128,7 @@
                 <div class="row">
 
                     <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
-                        <img src="Images/msnet.jpg" style="width:200px;" />
-                    </div>
-
-                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
                         <img src="Images/csharp.jpg" style="width:200px;" />
-                    </div>
-
-                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
-                        <img src="Images/sql.jpg" style="width:200px;" />
-                    </div>
-
-                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
-                        <img src="Images/html5.jpg" style="width:200px;" />
-                    </div>
-
-                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
-                        <img src="Images/css3.jpg" style="width:200px;" />
                     </div>
 
                     <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
@@ -152,7 +136,31 @@
                     </div>
 
                     <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/sql.jpg" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/AngularJS.png" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/Microsoft_Azure.svg.png" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
                         <img src="Images/aws-certified-cloud-practitioner.png" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/msnet.jpg" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/css3.jpg" style="width:200px;" />
+                    </div>
+
+                    <div style="text-align:center;" class="col-sm-6 col-md-4 col-lg-4">
+                        <img src="Images/html5.jpg" style="width:200px;" />
                     </div>
 
                 </div>
@@ -182,14 +190,14 @@
 
                 <!-- Portfolio Item 1 -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
 
-                        <img class="img-fluid" src="Images/MyBlog.png" />
+                        <img class="img-fluid" src="Images/Civix.png" />
                     </div>
                 </div>
 
@@ -232,6 +240,18 @@
                     </div>
                 </div>
 
+                <!-- Portfolio Item 5 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+
+                        <img class="img-fluid" src="Images/MyBlog.png" />
+                    </div>
+                </div>
 
             </div>
             <!-- /.row -->
@@ -492,6 +512,13 @@
                                 <!-- Portfolio Modal - Image -->
                                 <a href="https://bugtracker.zachcashion.com/"><img class="img-fluid rounded mb-5" src="Images/BugTracker.png" /></a>
                                 <!-- Portfolio Modal - Text -->
+                                <p class="mb-5 text-left">
+                                    Fully designed and developed a multi-functional issue tracker web
+                                    application, implementing enhanced roles & security, which also
+                                    used a Code First Relational database designed and modeled in SQL
+                                    Server. Technologies used include: .Net Framework v. 4.6.1, MVC5,
+                                    C#, LINQ, SQL, Entity Framework, jQuery DataTables.
+                                </p>
                                 <p class="mb-5"><a href="https://bugtracker.zachcashion.com/">Bug Tracker</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -530,8 +557,14 @@
                                 </div>
                                 <!-- Portfolio Modal - Image -->
                                 <a href="https://financialportal.zachcashion.com/"><img class="img-fluid rounded mb-5" src="Images/FinancialPortal.png" /></a>
-                                
+
                                 <!-- Portfolio Modal - Text -->
+                                <p class="mb-5 text-left">
+                                    A Financial Portal implemented in three phases. Phase 1: an MVC
+                                    Web Application, Phase 2: a Web Service that utilizes Swagger and
+                                    Swashbuckle for integrated testing, Phase 3: A cross platform
+                                    Xamarin Mobile Application.
+                                </p>
                                 <p class="mb-5"><p class="mb-5"><a href="https://financialportal.zachcashion.com/">Financial Portal</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
