--- a/ZachCashion_Personal_Website/index.html
+++ b/ZachCashion_Personal_Website/index.html
@@ -120,7 +120,8 @@
             <!-- About Section Content -->
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="lead">Full Stack .Net developer with experience in C#, JavaScript, SQL, AngularJS, Azure DevOps, AWS Cloud, MVC, LINQ, JQuery, Rest API, Bootstrap, CSS3, and HTML. </p>
+                    <p class="lead">Full Stack .Net developer with experience in</p>
+                    <p class="lead">Skills: C#, JavaScript, SQL, AngularJS, Azure DevOps, AWS Cloud, MVC, LINQ, JQuery, Rest API, Bootstrap, CSS3, and HTML. </p>
                 </div>
 
             </div>
@@ -190,7 +191,7 @@
 
                 <!-- Portfolio Item 1 -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white">
                                 <i class="fas fa-plus fa-3x"></i>
@@ -424,7 +425,7 @@
                             <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
                         </div>
                     </form>
-                    
+
                 </div>
             </div>
 
@@ -473,6 +474,12 @@
                                 <!-- Portfolio Modal - Image -->
                                 <a href="https://blog.zachcashion.com/"><img class="img-fluid rounded mb-5" src="Images/MyBlog.png" alt=""></a>
                                 <!-- Portfolio Modal - Text -->
+                                <p class="mb-5 text-left">
+                                    Fully designed and developed a blogging web application to SRS documentation.
+                                    Implementing enhanced roles and security to allow for commenters, moderators, multiple authors, and admins.
+                                    This projuct used a Code First Relational database designed and modeled in SQL Server.
+                                    Technologies used include: .Net Framework v. 4.6.1, MVC5, C#, LINQ, SQL, Entity Framework, jQuery DataTables.
+                                </p>
                                 <p class="mb-5"><a href="https://blog.zachcashion.com/">My Blog</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -513,11 +520,10 @@
                                 <a href="https://bugtracker.zachcashion.com/"><img class="img-fluid rounded mb-5" src="Images/BugTracker.png" /></a>
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5 text-left">
-                                    Fully designed and developed a multi-functional issue tracker web
-                                    application, implementing enhanced roles & security, which also
-                                    used a Code First Relational database designed and modeled in SQL
-                                    Server. Technologies used include: .Net Framework v. 4.6.1, MVC5,
-                                    C#, LINQ, SQL, Entity Framework, jQuery DataTables.
+                                    Fully designed and developed a multi-functional issue tracker web application to SRS documention.
+                                    Implementing enhanced roles & security along with a demo system to showcase user role management.
+                                    This project used a Code First Relational database designed and modeled in SQL Server.
+                                    Technologies used include: .Net Framework v. 4.6.1, MVC5, C#, LINQ, SQL, Entity Framework, jQuery DataTables.
                                 </p>
                                 <p class="mb-5"><a href="https://bugtracker.zachcashion.com/">Bug Tracker</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -560,10 +566,11 @@
 
                                 <!-- Portfolio Modal - Text -->
                                 <p class="mb-5 text-left">
-                                    A Financial Portal implemented in three phases. Phase 1: an MVC
-                                    Web Application, Phase 2: a Web Service that utilizes Swagger and
-                                    Swashbuckle for integrated testing, Phase 3: A cross platform
-                                    Xamarin Mobile Application.
+                                    A Financial Portal implemented in two phases.
+                                    Phase 1: an MVC Web Application fully designed and developed to SRS documention.
+                                    Phase 2: a Web Service that utilizes Swagger and Swashbuckle for integrated api testing.
+                                    This project used a Code First Relational database designed and modeled in SQL Server.
+                                    Technologies used include: .Net Framework v. 4.6.1, MVC5, C#, LINQ, SQL, Entity Framework, jQuery DataTables.
                                 </p>
                                 <p class="mb-5"><p class="mb-5"><a href="https://financialportal.zachcashion.com/">Financial Portal</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -604,6 +611,13 @@
                                 <!-- Portfolio Modal - Image -->
                                 <a href="https://webapi.zachcashion.com/"><img class="img-fluid rounded mb-5" src="Images/FinancialPortalWebAPI.png" /></a>
                                 <!-- Portfolio Modal - Text -->
+                                <p class="mb-5 text-lg-left">
+                                    A Financial Portal implemented in two phases.
+                                    Phase 1: an MVC Web Application fully designed and developed to SRS documention.
+                                    Phase 2: a Web Service that utilizes Swagger and Swashbuckle for integrated api testing.
+                                    This project used a Code First Relational database designed and modeled in SQL Server.
+                                    Technologies used include: .Net Framework v. 4.6.1, MVC5, C#, LINQ, SQL, Entity Framework, jQuery DataTables.
+                                </p>
                                 <p class="mb-5"><a href="https://webapi.zachcashion.com/">WebAPI</a></p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -616,7 +630,62 @@
             </div>
         </div>
     </div>
- 
+
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">
+                        <i class="fas fa-times"></i>
+                    </span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Civix</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <a href="https://gocivix.com/"><img class="img-fluid rounded mb-5" src="Images/Civix.png" /></a>
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5 text-lg-left">
+                                    Full Stack .Net Developer at Civix.
+                                    <br />
+                                    Development: Responsible for designing, implementing, improving, deploying, & maintaining products that include Campaign Finance, Financial Disclosure, & Lobbyist web apps, apis, databases, & servers.
+                                    <br />
+                                    Leadership: Responsible for working with the dev team to do sprint planning, story pointing, and triage of new tickets. Participating in some client meetings and managing expectations as well as providing estimates for new features.
+                                    <br />
+                                    Technologies: .Net, AngularJS, C#, SQL, SSRS, LINQ, MVC, Entity Framework, Azure Pipelines, AWS EC2, AWS S3.
+                                </p>
+                                <p>
+                                    <a href="https://mainecampaignfinance.com/">https://mainecampaignfinance.com/</a>
+                                    <br />
+                                    <a href="https://efile.ethics.ga.gov/">https://efile.ethics.ga.gov/</a>
+                                    <br />
+                                    <a href="https://login.cfis.sos.state.nm.us/">https://login.cfis.sos.state.nm.us/</a>
+                                </p>
+                                <p class="mb-5"><a href="https://gocivix.com/">Civix company site</a></p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal">
+                                    <i class="fas fa-times fa-fw"></i>
+                                    Close Window
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- JS Ex Modals -->
     <!-- JS Ex Modal 1 jsMath Exercies-->
@@ -1244,7 +1313,6 @@
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <!--<script src="js/contact_me.js"></script>-->
-
     <!-- Custom scripts for this template -->
     <script src="js/freelancer.min.js"></script>
 
